[package]
name = "tora-breakout-wasm"
version = "0.1.0"
authors = ["y-fujiwara"]
edition = "2018"

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
lto = true

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "HtmlElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ImageBitmap",
    "Blob"
]
